# SPDX-FileCopyrightText: Copyright (c) 2023 NVIDIA CORPORATION & AFFILIATES.
# All rights reserved.
# SPDX-License-Identifier: LicenseRef-NvidiaProprietary
#
# NVIDIA CORPORATION, its affiliates and licensors retain all intellectual
# property and proprietary rights in and to this material, related
# documentation and any modifications thereto. Any use, reproduction,
# disclosure or distribution of this material and related documentation
# without an express license agreement from NVIDIA CORPORATION or
# its affiliates is strictly prohibited.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xdf"
version = "0.1.0a0"
dependencies = [
    "nvtx ; platform_system == 'Linux'",
    "pandas<2.0.0",
    "rich",
    "typing_extensions>=4",
]

[tool.setuptools]
license-files = ["LICENSE"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-reportlog",
    "pytest-xdist",
    "pre-commit",
    # dependencies to run pandas tests
    # https://github.com/pandas-dev/pandas/blob/main/environment.yml
    # TODO: When pandas 2.0 is the minimum version, can just specify pandas[all]
    "pytest-asyncio",
    "beautifulsoup4",
    "blosc",
    "brotlipy",
    "bottleneck",
    "fastparquet",
    "fsspec",
    "html5lib",
    "hypothesis",
    "gcsfs",
    "ipython",
    "jinja2",
    "lxml",
    "matplotlib",
    "numba",
    "numexpr",
    "openpyxl",
    "odfpy",
    "py",
    "psycopg2-binary",
    "pyarrow",
    "pymysql",
    "pyreadstat",
    "tables",
    "python-snappy",
    "pyxlsb",
    "s3fs",
    "scipy",
    "sqlalchemy",
    "tabulate",
    "xarray",
    "xlrd",
    "xlsxwriter",
    "zstandard",
]
